data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2109.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8e\80\80\80\00\01\04\6d\6f\64\31\05"
    "\66\75\6e\63\31\00\00\03\82\80\80\80\00\01\00\0a"
    "\a2\80\80\80\00\01\9c\80\80\80\00\00\10\00\04\7f"
    "\10\00\04\7f\41\01\05\10\00\0b\05\10\00\04\7f\10"
    "\00\05\41\00\0b\0b\0b"
  )
""
)